--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
         <main>
             <section > 
                 <article id="Lifestyle" class="Lifestyle"> 
-                <img src="img/homework-01.jpg" alt="image of More than just a music festival">
+                <img src="./homework-01-01/img/homework-01.jpg" alt="image of More than just a music festival">
                 <p>Lifestyle</p>
                 <h2>More than just a music festival</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit cum dolorum consectetur iusto. Sit natus nulla maxime officia veritatis rerum accusantium excepturi maiores facere illum aliquid, atque assumenda odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus quia esse repudiandae, nulla mollitia quod, praesentium neque eos in, facilis suscipit voluptates rerum excepturi placeat culpa debitis enim nesciunt!</p>
                 </article>
                 <article class="Lifestyle"> 
-                <img src="img/homework-02.jpg" alt="image of More than just a music festival">   
+                <img src="./homework-01-01/img/homework-02.jpg" alt="image of More than just a music festival">   
                 <p>Lifestyle</p>
                 <h2>Life tastes better with coffee</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit cum dolorum consectetur iusto. Sit natus nulla maxime officia veritatis rerum accusantium excepturi maiores facere illum aliquid, atque assumenda odit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque pariatur, facere nobis nulla suscipit blanditiis quo iste quod. Suscipit eos dolorum vitae quaerat assumenda sapiente accusamus rerum nesciunt autem. Dolore.</p>
                 </article>
                 <article id="Photodiary" class="Photodiary"> 
-                <img src="img/homework-03.jpg" alt="image of More than just a music festival">   
+                <img src="./homework-01-01/img/homework-03.jpg" alt="image of More than just a music festival">   
                 <p>Photodiary</p>
                 <h2>American dream</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit cum dolorum consectetur iusto. Sit natus nulla maxime officia veritatis rerum accusantium excepturi maiores facere illum aliquid, atque assumenda odit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium dolore provident? Molestiae perferendis libero vitae ipsa corporis, consequatur nam nulla impedit veritatis. Sit omnis assumenda vel et, quidem laboriosam!</p>
                 </article>
                 <article class="Photodiary"> 
-                <img src="img/homework-04.jpg" alt="image of More than just a music festival">   
+                <img src="./homework-01-01/img/homework-04.jpg" alt="image of More than just a music festival">   
                 <p>Photodiary</p>
                 <h2>A day exploring the Alps</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit cum dolorum consectetur iusto. Sit natus nulla maxime officia veritatis rerum accusantium excepturi maiores facere illum aliquid, atque assumenda odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati totam maiores sapiente asperiores rem voluptas placeat ullam atque modi, vero, maxime recusandae tempore? Explicabo laborum atque ab, deserunt illum sunt?</p>
