--- a/homework-05/index.html
+++ b/homework-05/index.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>HW-05</title>
 </head>
-<body>
-    
+<body>    
     <header class="container">
         <nav class="page-nav">
             <a class="logo" href="">mart</a>
@@ -28,8 +26,8 @@
     </header>
     <main>
         <div class="slider">
-            <button class="slider-btn next"><img  src="img/icons/next.png" alt="">></button>
-            <button class="slider-btn prev"><img  src="img/icons/prev.png" alt=""><</button>
+            <button class="slider-btn next"></button>
+            <button class="slider-btn prev"></button>
             <ul class="slides">
                 <li>
                 <img src="img/slider.jpg" alt="">
@@ -37,18 +35,18 @@
                 <p class="slider-description">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
                 </li>
             </ul>
-        </div>        
-        <div class="container">
-                <section class="products-list clearfix">
+        </div> 
+            <section class="products-list clearfix">
+                <div class="container">
                     <h2 class="title">new collection</h2>
                     <article class="products-list-item">
-                        <div class="overlay clearfix">
-                            <div class="overlay-icon"><img src="img/like.png" alt=""></div>   
-                            <div class="overlay-icon"><img src="img/strelochki.png" alt=""></div>
-                            <div class="overlay-icon mr"><img src="img/clock.png" alt=""></div>
+                        <div class="overlay">
+                            <div class="overlay-icon"><button class="like"></button></div>   
+                            <div class="overlay-icon"><button class="strelochki"></button></div>
+                            <div class="overlay-icon mr"><button class="clock"></button></div>
                             <div class="cart">
-                                <div class="cart-icon"><img src="img/korzina.png" alt=""></div> 
-                                <div class="cart-text">add to cart</div>
+                            <button class="cart-icon"></button>
+                            <button class="cart-text">add to cart</button>
                             </div>
                         </div>
                         <img src="img/blue-tshirt.jpg" alt="" >
@@ -58,13 +56,13 @@
                         </div>   
                     </article>
                     <article class="products-list-item">
-                        <div class="overlay clearfix">
-                            <div class="overlay-icon"><img src="img/like.png" alt=""></div>   
-                            <div class="overlay-icon"><img src="img/strelochki.png" alt=""></div>
-                            <div class="overlay-icon mr"><img src="img/clock.png" alt=""></div>
+                            <div class="overlay">
+                            <div class="overlay-icon"><button class="like"></button></div>   
+                            <div class="overlay-icon"><button class="strelochki"></button></div>
+                            <div class="overlay-icon mr"><button class="clock"></button></div>
                             <div class="cart">
-                            <div class="cart-icon"><img src="img/korzina.png" alt=""></div> 
-                            <div class="cart-text">add to cart</div>
+                              <button class="cart-icon"></button>
+                              <button class="cart-text">add to cart</button>
                             </div>
                             </div>
                             <img src="img/woman-shirt.jpg" alt="" >
@@ -74,13 +72,13 @@
                             </div>   
                     </article>
                     <article class="products-list-item">
-                        <div class="overlay clearfix">
-                            <div class="overlay-icon"><img src="img/like.png" alt=""></div>   
-                            <div class="overlay-icon"><img src="img/strelochki.png" alt=""></div>
-                            <div class="overlay-icon mr"><img src="img/clock.png" alt=""></div>
+                            <div class="overlay">
+                            <div class="overlay-icon"><button class="like"></button></div>   
+                            <div class="overlay-icon"><button class="strelochki"></button></div>
+                            <div class="overlay-icon mr"><button class="clock"></button></div>
                             <div class="cart">
-                                <div class="cart-icon"><img src="img/korzina.png" alt=""></div> 
-                                <div class="cart-text">add to cart</div>
+                                    <button class="cart-icon"></button>
+                                    <button class="cart-text">add to cart</button>
                             </div>
                             </div>
                             <img src="img/yellow-tshirt.jpg" alt="" >
@@ -90,13 +88,13 @@
                             </div>   
                     </article>
                     <article class="products-list-item">
-                        <div class="overlay clearfix">
-                            <div class="overlay-icon"><img src="img/like.png" alt=""></div>   
-                            <div class="overlay-icon"><img src="img/strelochki.png" alt=""></div>
-                            <div class="overlay-icon mr"><img src="img/clock.png" alt=""></div>
+                            <div class="overlay">
+                            <div class="overlay-icon"><button class="like"></button></div>   
+                            <div class="overlay-icon"><button class="strelochki"></button></div>
+                            <div class="overlay-icon mr"><button class="clock"></button></div>
                             <div class="cart">
-                                <div class="cart-icon"><img src="img/korzina.png" alt=""></div> 
-                                <div class="cart-text">add to cart</div>
+                                    <button class="cart-icon"></button>
+                                    <button class="cart-text">add to cart</button>
                             </div>
                             </div>
                             <img src="img/cool-lingerie.jpg" alt="" >
@@ -105,8 +103,8 @@
                                 <div><a class="prod-price">$56</a></div>   
                             </div>   
                     </article>
+                </div>
             </section>
-        </div>
     </main>
 <footer>
 <span>All Rights Reserved © Dokan | Designed <a>ThemenGraph</a></span>
