--- a/homework-05/index.html
+++ b/homework-05/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div> 
             <section class="products-list clearfix">
-                <div class="container">
+                <div class="container clearfix">
                     <h2 class="title">new collection</h2>
                     <article class="products-list-item">
                         <div class="overlay">
