--- a/homework-06/index.html
+++ b/homework-06/index.html
@@ -13,7 +13,8 @@
 <body>
 <div class="wrapper">
 <header class="container">
-    <div class="logo">MoGo</div>
+    <a href="#" class="logo">MoGo</a>
+<nav>
     <ul>
         <li><a class="navigation" href="">about</a></li>
         <li><a class="navigation" href="">service</a></li>
@@ -21,12 +22,12 @@
         <li><a class="navigation" href="">blog</a></li>
         <li><a class="navigation" href="">contact</a></li>
     </ul>
+</nav>
 </header> 
 <main>
 <section>
 <div class="services">
-    <p class="pre-title">We work with</p>
-    <h2 class="title">Amazing Services</h2> 
+    <h2 class="title"><span class="pre-title">We work with</span> Amazing Services</h2> 
 </div>   
 <ul class="services-list">
     <li class="services-list-item">
@@ -66,24 +67,23 @@
     </li>
 </ul>
 </section>
-<section>
+<section class="team-section">
 <div class="team-title">
-    <p class="pre-title">Who we are</p>
-    <h2 class="title">Meet our team</h2> 
-    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do copy 
+    <h2 class="title"><span class="pre-title">Who we are</span>Meet our team</h2> 
+</div>
+    <span class="team-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do copy 
     Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do copy.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do copy
     </span>
-</div>
 <ul class="team">
     
     <li>
     <div class="blue-screen">
     <div class="first">
             <div class="overlay">
-                    <div class="overlay-icon"><button class="facebook"></button></div>
-                    <div class="overlay-icon"><button class="twitter"></button></div>
-                    <div class="overlay-icon"><button class="pinterest"></button></div>
-                    <div class="overlay-icon"><button class="instagram"></button></div>
+                    <div class="overlay-icon"><a href="#" class="facebook" ></a></div>
+                    <div class="overlay-icon"><a class="twitter"></a></div>
+                    <div class="overlay-icon"><a class="pinterest"></a></div>
+                    <div class="overlay-icon"><a class="instagram"></a></div>
             </div> 
             <img src="img/matthew.jpg" alt="Matthew Dix">
         </div>
@@ -96,10 +96,10 @@
     <div class="blue-screen">
     <div class="second">
             <div class="overlay">
-                    <div class="overlay-icon"><button class="facebook"></button></div>
-                    <div class="overlay-icon"><button class="twitter"></button></div>
-                    <div class="overlay-icon"><button class="pinterest"></button></div>
-                    <div class="overlay-icon"><button class="instagram"></button></div>
+                    <div class="overlay-icon"><a href="#" class="facebook" ></a></div>
+                    <div class="overlay-icon"><a class="twitter"></a></div>
+                    <div class="overlay-icon"><a class="pinterest"></a></div>
+                    <div class="overlay-icon"><a class="instagram"></a></div>
             </div> 
         <img src="img/christopher.jpg" alt="Christopher Campbell">
     </div>
@@ -112,10 +112,10 @@
     <div class="blue-screen">
     <div class="third">
             <div class="overlay">
-                    <div class="overlay-icon"><button class="facebook"></button></div>
-                    <div class="overlay-icon"><button class="twitter"></button></div>
-                    <div class="overlay-icon"><button class="pinterest"></button></div>
-                    <div class="overlay-icon"><button class="instagram"></button></div>
+                    <div class="overlay-icon"><a href="#" class="facebook" ></a></div>
+                    <div class="overlay-icon"><a class="twitter"></a></div>
+                    <div class="overlay-icon"><a class="pinterest"></a></div>
+                    <div class="overlay-icon"><a class="instagram"></a></div>
             </div> 
         <img src="img/michael.jpg" alt="Michael Fertig">
     </div>
