--- a/homework-07/index.html
+++ b/homework-07/index.html
@@ -11,8 +11,9 @@
     <title>HW-07</title>
 </head>
 <body>
+    <header>        
     <div class="wrapper">
-    <nav>
+        <nav>
             <a href="#" class="logo">Golden</a>
             <ul class="navigation-list">
                 <li><a href="" class="navigation">Home</a></li>
@@ -22,8 +23,11 @@
                 <li><a href="" class="navigation">Contact</a></li>
             </ul>
     </nav>
+    </div>
+</header>
 <main>
     <section class="services-sec">
+            <div class="wrapper">
 <h2 class="title">services<span class="pre-title">Lorem ipsum dolor sit amet.</span></h2>
 <ul class="services-list">
     <li class="services-item">
@@ -45,22 +49,24 @@
     </div>
     </li>
 </ul>
-    </section>
+</div>
+</section>
     <section class="contacts-sec">
+            <div class="wrapper">
 <h2 class="title">contact us<span class="pre-title">Lorem ipsum dolor sit amet.</span></h2>
 <form action="#" class="contacts-form">
     <div class="left-input">
-        <input type="text" placeholder="your name *" name="name" value="your name *" required>
-        <input type="email" placeholder="your e-mail *" name="email" value="your e-mail *" required>
-        <input type="text" placeholder="subject" name="subject" value="subject">
+        <input type="text" placeholder="your name *" name="name" required>
+        <input type="email" placeholder="your e-mail *" name="email" required>
+        <input type="text" placeholder="subject" name="subject">
     </div>
     <div class="right-input">
         <textarea name="massage" placeholder="your massage *" cols="30" rows="10" required></textarea>
     </div>
-</form>   
-<input class="btn" type="submit" value="send massage">
+ <input class="btn" type="submit" value="send massage">
+</form>  
+</div>
 </section>
 </main>
-    </div>
 </body>
 </html>
