--- a/homework-08/index.html
+++ b/homework-08/index.html
@@ -30,36 +30,36 @@
             <h3 class="partners-title">Meet a partner for your best holiday</h3>
             <ul class="partners-list">
                 <li class="partner-item">
-                    <div class="img-container">
+                    <div class="img-container icon Bradley">
                     <img class="partner-photo" src="img/Bradley1.png" alt="" width="120"
-                    height="120"><div class="icon Bradley"></div>
+                    height="120">
                 </div>
                     <p class="parner-name">Bradley Hunter</p>
-                    <span class="partner-description">Based in Chicago. I love playing tennis and loud music.</span>
+                    <p class="partner-description">Based in Chicago. I love playing tennis and loud music.</p>
                 </li>
                 <li class="partner-item">
-                    <div class="img-container">
+                    <div class="img-container icon Lucas">
                     <img src="img/Lucas.png" alt="" class="partner-photo" width="120"
-                    height="120"><div class="icon Lucas"></div>
+                    height="120">
                 </div>
                     <p class="parner-name">Lucas Marsha</p>
-                    <span class="partner-description">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards. </span>
+                    <p class="partner-description">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards. </p>
                 </li>
                 <li class="partner-item">
-                    <div class="img-container">
+                    <div class="img-container icon Heather">
                     <img src="img/Heather.png" alt="" class="partner-photo" width="120"
-                    height="120"><div class="icon Heather"></div>
+                    height="120">
                 </div>
                     <p class="parner-name">Heather Walker</p>
-                    <span class="partner-description">I'm a happy person that loves cats and climbing on mountains. </span>
+                    <p class="partner-description">I'm a happy person that loves cats and climbing on mountains. </p>
                 </li>
                 <li class="partner-item">
-                    <div class="img-container">
+                    <div class="img-container icon Bradley-girl">
                     <img src="img/Bradley.png" alt="" class="partner-photo" width="120"
-                    height="120"><div class="icon Bradley-girl"></div>
+                    height="120">
                 </div>
                     <p class="parner-name">Bradley Hunter</p>
-                    <span class="partner-description">Based in Chicago. I love playing tennis and loud music.</span>
+                    <p class="partner-description">Based in Chicago. I love playing tennis and loud music.</p>
                 </li>
             </ul>
             <div class="partners-btn">
