--- a/homework-08/index.html
+++ b/homework-08/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>HW-08</title>
@@ -15,14 +16,12 @@
            <li><a class="log-in" href="#">Log in</a></li> 
            <li><a class="sign-up" href="#">Sign up</a></li>         
         </ul>   
-           <span class="logo"><a href="#">URLAUBSGLÜCK</a></span>
+          <a class="logo" href="#">URLAUBSGLÜCK</a>
         </nav>
         <div class="container">
-            <div class="title-container">
             <h2 class="title">Share your holiday dreams</h2>
             <p class="descr">And find the perfect partner to fullfill it</p>
-            <button class="main-button"><a href="#">Find your holiday partner</a></button>
-        </div>
+            <div class="main-button"><a href="#">Find your holiday partner</a></div>
         </div>
         </header>
     <div class="container">
