--- a/homework-11/src/html/header.html
+++ b/homework-11/src/html/header.html
@@ -8,14 +8,16 @@
             <li class="site-navigation__item"><a class="site-navigation__link" href="">blog</a></li>
             <li class="site-navigation__item"><a class="site-navigation__link" href="">contact</a></li>
             <li class="site-navigation__item--svg"><a class="link" href="#">
-                <img class="site-navigation__svg site-navigation__link--search" src="images/icons/icon-cart.svg" alt="go to busket">
-            </a></li>
+                    <img class="site-navigation__svg site-navigation__link--search" src="images/icons/icon-cart.svg"
+                        alt="go to busket">
+                </a></li>
             <li class="site-navigation__item--svg"><a class="link" href="#">
-                <img class="site-navigation__svg site-navigation__link--search" src="images/icons/icon-search.svg" alt="search">
-            </a></li>
+                    <img class="site-navigation__svg site-navigation__link--search" src="images/icons/icon-search.svg"
+                        alt="search">
+                </a></li>
         </ul>
     </nav>
     <h1 class="head head__title"><span class="head head__descr">Creative Template</span>Welcome
         to MoGo</h1>
-        <button class="head head__btn">Learn more</button>
-    </header>
+    <button class="head head__btn">Learn more</button>
+</header>
